// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav should render with alt text 1`] = `
<img
  alt="Data loading indicator"
  height="80"
  src=""
  width="80"
/>
`;

exports[`SideNav should render with styles 1`] = `
<img
  alt="loading indicator"
  height="80"
  src=""
  style="padding: 10px;"
  width="80"
/>
`;
